tests/NormalTests/paczka1/small_fuzzy/27956296.err
Error in line 2: zl0gynGyAi S868 87,4
Error in line 4: jfgMKQL1 S868 62,1
Error in line 8: DdTcvmM4k4 A719 145,2
Error in line 3: zl0gynGyAi A333 42,6
Error in line 10: A333 S776 16,4
